Now supporting 3 different outputs: First result, iterator and list.